/* Etymology 1 */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <pull#52841177>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -42,7 +42,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 # To toss a [[frisbee]] with the intention of launching the disc across the length of a field.
 # {{lb|en|intransitive}} To [[row]].
 #* '''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter VI
-# {{lb|de|transitive|rowing}} To achieve by rowing on a [[rowing machine]]. 
+# {{lb|en|transitive|rowing}} To achieve by rowing on a [[rowing machine]]. 
 #: {{ux|en|I '''pulled''' a personal best on the erg yesterday.}}
 #*: It had been a sort of race hitherto, and the rowers, with set teeth and compressed lips, had '''pulled''' stroke for stroke.
 # To draw apart; to tear; to rend.
