--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -76,6 +76,9 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 ====Declension====
 {{pl-decl-noun-masc-inani|manda|t|u}}
 
+===Further reading===
+* {{R:PWN}}
+
 ----
 
 ==Serbo-Croatian==
