/* Synonyms */ stopping mechanism:hasp <catch#53001312>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -91,7 +91,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * {{jump|s|act of noticing|t}} [[observation]]
 * {{jump|s|a find|t}} [[prize]], [[find]]; [[conquest]], [[beau]]
 * {{jump|s|quantity captured}} [[haul]], [[take]]
-* {{jump|s|stopping mechanism|t}} [[stop]], [[chock]]; [[clasp]], [[latch]]
+* {{jump|s|stopping mechanism|t}} [[stop]], [[chock]]; [[clasp]], [[hasp]], [[latch]]
 * {{jump|s|hidden difficulty|t}} [[snag]], [[problem]]; [[trick]], [[gimmick]], [[hitch]]
 * {{jump|s|fragment of music}} [[snatch]], [[fragment]]; [[snippet]], [[bit]]
 * {{jump|s|refrain}} [[chorus]], [[refrain]], [[burden]]
