--- a/en/昩/昩.16977.wikitext
+++ b/en/昩/昩.16977.wikitext
@@ -30,7 +30,7 @@
 # {{zh-hg}} [[cloudy]]; [[gloomy]]
 #* ''{{w|Jiyun}}'': {{lang|zh|'''昩'''，日中不明。}}
 # {{zh-hg}} {{zh-alt-form|昧|[[star]]}}
-#* ''{{w|Guangyun}}'': {{lang|zh|'''昩'''，星也。《易》曰，日中見'''昩'''。案《音義》云《字林》作[[昧]]，斗杓後星，王肅音妹。}}
+#* ''{{w|Guangyun}}'': {{lang|zh|'''昩'''，星也。《易》曰，日中見'''昩'''。案《音義》云《字林》作[[昧]]，斗杓後星，王肅音[[妹]]。}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
