/* Noun */ sense 2 redundant with sense 3 <thunder#53053057>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -18,8 +18,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 
 # The loud rumbling, cracking, or crashing [[sound]] caused by expansion of rapidly heated air around a [[lightning]] bolt.
 #: '''''Thunder''' ''is preceded by lightning.''
-# A sound resembling thunder; especially, one produced by a [[jet]] [[airplane]] in flight.
-# A deep, [[rumble|rumbling]] noise.
+# A deep, [[rumble|rumbling]] noise resembling thunder.
 #: ''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.''
 # An alarming or startling [[threat]] or [[denunciation]].
 #* Prescott
