--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -137,10 +137,10 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Chinese:
 *: Cantonese: {{t|yue|講}}, {{t|yue|讲|tr=gong2}}
 *: Dungan: {{t|dng|фә}}, {{t|dng|шә}}
-*: Hakka: {{t|hak|講}}
+*: Hakka: {{t|hak|講}}, {{t|hak|讲|tr=kóng}}
 *: Mandarin: {{t+|cmn|講|sc=Hani}}, {{t+|cmn|讲|tr=jiǎng|sc=Hani}}, {{t+|cmn|說話|sc=Hani}}, {{t+|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t+|cmn|講話|sc=Hani}}, {{t+|cmn|讲话|tr=jiǎnghuà|sc=Hani}}, {{t+|cmn|說}}, {{t+|cmn|说|tr=shuō}}
-*: Min Bei: {{t|mnp|講}}
-*: Min Dong: {{t|cdo|講}}
+*: Min Bei: {{t|mnp|講}}, {{t|mnp|讲|tr=gǒ̤ng}}
+*: Min Dong: {{t|cdo|講}}, {{t|cdo|讲|tr=gōng}}
 *: Min Nan: {{t+|nan|講}}, {{t|nan|讲|tr=kóng}}
 *: Wu: {{t|wuu|講}}, {{t|wuu|讲|tr=kaan}}
 * Corsican: {{t+|co|parlà}}
@@ -176,7 +176,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Irish: {{t|ga|labhair}}
 * Istriot: {{t|ist|favalà}}
 * Italian: {{t+|it|parlare}}
-* Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t+|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=[[いう]], iu}}, {{t+|ja|しゃべる|tr=shaberu}}
+* Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t+|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=いう, iu}}, {{t+|ja|しゃべる|tr=shaberu}}
 * Kannada: {{t+|kn|ಎನ್|sc=Knda}}, {{t+|kn|ಎನು|sc=Knda}}, {{t+|kn|ಮಾತಾಡು|sc=Knda}}, {{t+|kn|ಮಾತನಾಡು|sc=Knda}}
 * Kazakh: {{t+|kk|айту|sc=Cyrl}}, {{t+|kk|сөйлеу|sc=Cyrl}}, {{t+|kk|сөйлесу|sc=Cyrl}}
 * Khmer: {{t+|km|និយាយ}}, {{t+|km|ក្លាវ}}
