--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -199,8 +199,8 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Marathi: {{t|mr|बोलणे|sc=Deva}}
 * Meänkieli: {{t|fit|praatata}}
 * Mingrelian: {{t-needed|xmf}}
-{{trans-mid}}
 * Mirandese: {{t|mwl|falar}}
+{{trans-mid}}
 * Mongolian: {{t+|mn|ярих|sc=Cyrl}}
 * Nahuatl: {{t|nah|tlatoa}}
 * Navajo: {{t|nv|yáshtiʼ}}
@@ -235,7 +235,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 *: Northern Sami: {{t|se|hállat}}, {{t|se|hoallat}}, {{t|se|hupmat}}
 *: Southern Sami: {{t|sma|håaledh}}, {{t|sma|håalodh}}, {{t|sma|nåalodh}}
 * Samoan: {{t|sm|tautala}}
-* Sanskrit: {{t+|sa|भणति}}
+* Sanskrit: {{t+|sa|भणति}}, {{t+|sa|ब्रवीति}}
 *: Vedic: {{t|sa|भनति|tr=bhánati}}
 * Santali: {{t|sat|ᱨᱳᱲ|tr=rorr|sc=Olck}}
 * Sardinian: {{t|sc|fabedda}}, {{t|sc|faeddare}}, {{t|sc|fueddai}}
