--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -351,6 +351,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Greek:
 *: Ancient Greek: {{t|grc|ζωγρέω}}
 * Haitian Creole: {{t|ht|atrap}}
+* Hungarian: {{t+|hu|elkap}}
 * Ido: {{t+|io|kaptar}}
 * Interlingue: {{t|ie|capter}}
 * Irish: {{t|ga|ceap}}, {{t|ga|beir ar}}
