--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -342,6 +342,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 *: Min Nan: {{t+|nan|掠|tr=lia̍h|sc=Hani}}
 * Czech: {{t+|cs|chytat|impf}}, {{t+|cs|chytit|pf}}
 * Danish: {{t+|da|fange}}
+* Dutch: {{t+|nl|vangen}}
 * Esperanto: {{t+|eo|kapti}}
 * Finnish: {{t+|fi|napata}}, {{t|fi|saada kiinni}}
 * French: {{t+|fr|attraper}}, {{t+|fr|prendre}}
