--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -367,6 +367,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{trans-mid}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
+* Norwegian: {{t+|no|fange}}
 * Polish: {{t+|pl|łapać|impf}}, {{t+|pl|złapać|pf}}, {{t+|pl|schwytać|pf}}
 * Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}
 * Quechua: {{t|qu|jap'iy}}
