/* Translations */ <New Zealand#53152714>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -173,7 +173,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Wolof: {{t|wo|Seland-Gu-Bees}}
 * Yiddish: {{t|yi|ניו־זילאַנד}}
 * Yoruba: {{t|yo|Şilandi Titun}}
-* Zhuang: {{t|za|Saen Saelanz}}
+* Zhuang: {{t|za|Sinhsihlanz}}
 * Zulu: {{t|zu|INyuzilandi}}
 {{trans-bottom}}
 
