--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 # {{lb|en|UK|dialect}} An [[oystercatcher]], a shore bird.
 
 ====Derived terms====
-{{der3|en|black olive|green olive|olive branch|olive crown|[[olive drab]]<!--[[o.d.]]-->|olive green|olive grove|olive oil|olivey|queen olive|[[Russian olive]] ({{taxlink|Elaeagnus angustifolia|species|ver=190522}})|wild olive}}
+{{der3|en|black olive|green olive|olive branch|olive crown|[[olive drab]]<!--[[o.d.]]-->|olive green|olive grove|olive oil|olivey|queen olive|[[Russian olive]] ({{taxlink|Elaeagnus angustifolia|species|ver=190522}})|{{vern|wild olive}}}}
 
 ====Translations====
 {{trans-see|olive tree}}
