--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 # {{lb|en|UK|dialect}} An [[oystercatcher]], a shore bird.
 
 ====Derived terms====
-{{der3|en|black olive|green olive|{{vern|olive baboon}} ({{taxlink|Papio anubis|species|ver=190522}})|{{vern|olive barb}} ({{taxlink|Systomus sarana|species|ver=190522}})|{{vern|olive bee-eater}} ({{taxlink|Merops superciliosus|species|ver=190522}})|olive branch|{{vern|olive bulbul}} ({{taxlink|Iole viridescens|species|ver=190522}})|{{vern|olive coleus}} ({{taxlink|Solenostemon scutellariodes|species|ver=190522}})|olive crown|[[olive drab]]<!--[[o.d.]]-->|olive green|olive grove|olive oil|olivey|queen olive|[[Russian olive]] ({{taxlink|Elaeagnus angustifolia|species|ver=190522}})|{{vern|wild olive}}}}
+{{der3|en|black olive|green olive|[[olive baboon]] (''{{ll|mul|Papio anubis}}'')|{{vern|olive barb}} ({{taxlink|Systomus sarana|species|ver=190522}})|{{vern|olive bee-eater}} ({{taxlink|Merops superciliosus|species|ver=190522}})|olive branch|{{vern|olive bulbul}} ({{taxlink|Iole viridescens|species|ver=190522}})|{{vern|olive coleus}} ({{taxlink|Solenostemon scutellariodes|species|ver=190522}})|{{vern|olive colobus}} ({{taxlink|Procolobus verus|species|ver=190522}})|olive crown|[[olive drab]]<!--[[o.d.]]-->|{{vern|olive finch}} ({{taxlink|Arremon castaneiceps|species|ver=190522}})|[[olive flounder]] ({{taxlink|Paralichthys olivaceus|species|ver=190522}})|{{vern|olive flyrobin}} ({{taxlink|Microeca flavovirescens|species|ver=190522}})|{{vern|olive fruit fly}} ({{taxlink|Dacus oleae|species|ver=190522}})|olive green|olive grove|{{vern|olive honeyeater}} ({{taxlink|Lichmera argentauris|species|ver=190522}})|{{vern|olive ibis}} (''{{ll|mul|Bostrychia olivacea}}'')|{{vern|olive lace bug}} ({{taxlink|Froggattia olivina|species|ver=190522}})|{{vern|olive long-tailed cuckoo}} (''{{ll|mul|Cercococcyx olivinus}}'')|{{vern|olive mangrove}}|{{vern|olive marsh snake}} ({{taxlink|Natriciteres olivacea|species|ver=190522}})|{{vern|olive moth}} ({{taxlink|Prays oleellus|species|ver=190522}})|olive oil|olivey|{{vern|olive oropendola}} ({{taxlink|Psarocolius bifasciatus|species|ver=190522}})|{{vern|olive plum}} ({{taxlink|Elaeodendron|genus|ver=190522}}|{{vern|olive python}} ({{taxlink|Liasis olivaceus|species|ver=190522}})|[[olive ridley sea turtle]] ({{taxlink|Lepidochelys olivacea|species|ver=190522}})|queen olive|[[Russian olive]] ({{taxlink|Elaeagnus angustifolia|species|ver=190522}})|{{vern|wild olive}}}}
 
 ====Translations====
 {{trans-see|olive tree}}
