--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -45,7 +45,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 *: Syriac: {{t|arc|ܙܝܬܐ|tr=zaytā, zayto|m}}
 * Armenian: {{t+|hy|ձիթապտուղ}}, {{qualifier|colloquially}} {{t+|hy|զեյթուն}}
 * Aromanian: {{t|rup|masinã|f}}
-* Assamese: {{t|as|জলফাই|tr=zolphai}}
+* Assamese: {{t|as|জলফাই}}
 * Asturian: {{t|ast|aceituna|f}}
 * Azerbaijani: {{t+|az|zeytun}}
 * Bashkir: {{t|ba|зәйтүн|sc=Cyrl}}
@@ -93,7 +93,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 * Karekare: {{t|kai|zambatu}}
 * Kazakh: {{t|kk|зәйтүн|sc=Cyrl}}
 {{trans-mid}}
-* Khmer: {{t|km|ផ្លែអូលីវ|tr=plae ooliiv|sc=Khmr}}
+* Khmer: {{t|km|អូលីវ}}
 * Korean: {{t+|ko|올리브}}
 * Kurdish: {{t+|ku|zeytûn|f}}
 * Kyrgyz: {{t+|ky|зайтун|sc=Cyrl}}
