--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -316,7 +316,7 @@ Borrowed from {{bor|en|xno|conte}} and {{bor|en|fro|comte||count}}, from {{der|e
 
 # The [[male]] [[ruler]] of a [[county]].
 # A [[nobleman]] [[hold]]ing a [[rank]] [[intermediate]] between [[duke]]s and [[baron]]s.
-# {{lb|en|entomology}} Any of various [[nymphalid]] butterflies of the genus ''[[w:Tanaecia|Tanaecia]]''.
+# {{lb|en|entomology}} Any of various [[nymphalid]] butterflies of the genus ''[[w:Tanaecia|Tanaecia]]''. Other butterflies in this genus are called [[earl]]s and [[viscount]]s.
 
 =====Synonyms=====
 * {{sense|English counts}} {{l|en|earl}}
