# {{lb|zh|Taiwan|historical|by extension}} of or relating to the [[CPC]] #: {{zh-also|匪}} <偽#53159394>

--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -41,6 +41,8 @@
 #: {{zh-x|偽政權|puppet government}}
 # [[falsehood]]; [[untruthfulness]]
 # [[illegal]]; [[illegitimate]]
+# {{lb|zh|Taiwan|historical|by extension}} of or relating to the [[CPC]]
+#: {{zh-also|匪}}
 # [[pseudo-]]
 #: {{zh-x|偽麻黃鹼|pseudoephedrine}}
 
