t+ang:[[campian]] t+ang:[[sacan]] t+ang:[[wigan]] ([[WT:EDIT|Assisted]]) <fight#53163690>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -128,7 +128,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Norman: {{t|nrf|freûler|alt=s'freûler}} {{qualifier|Jersey}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|stridj}}
 * Norwegian: {{t+|no|slåss}}, {{t+|no|kjempe}}
-* Old English: {{t|ang|feohtan}}
+* Old English: {{t|ang|feohtan}}, {{t|ang|campian}}, {{t|ang|sacan}}, {{t|ang|wīgan}}
 * Oriya: {{t-needed|or}}
 * Persian: {{t+|fa|مبارزه کردن|tr=mobâreze kardan}}, {{t+|fa|جنگیدن|tr=jangidan}}
 * Polish: {{t+|pl|walczyć|impf}}, {{t+|pl|bić|impf|alt=bić się}}
