--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -287,7 +287,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Maltese: {{t|mt|għanbaqar}}
 * Manx: {{t|gv|plumbis|m}}
 * Maori: {{t|mi|paramu}}
-* Middle English: {{t|enm|plomme}}
+* Middle English: {{t|enm|plomme}}, {{t|enm|prune}}
 * Middle High German: {{t|gmh|pflūme}}, {{t|gmh|pfrūme}}
 * Navajo: {{t|nv|chʼil naʼatłʼoʼiitsoh}}
 * Norman: {{t|nrf|preune|f}}
