--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -52,6 +52,10 @@
 ====Readings====
 * {{ja-readings|on=ゆ|kun=まさる,いよいよ}}
 
+===Definitions===
+{{ja-kanjitab|いよいよ|yomi=k}}
+{{ja-see|いよいよ}}
+
 ----
 
 ==Korean==
