--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -1,5 +1,4 @@
-{{also|france|Francë}}France is a country in Europe, their language is French It is the 1# tourist destination in 2019
-
+{{also|france|Francë}}
 ==English==
 {{wikipedia}}
 {{Wikivoyage}}
