--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -142,6 +142,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 *: Cantonese: {{t|yue|插|tr=chaap3|sc=Hani}}
 *: Mandarin: {{t+|cmn|朿|tr=cì}}
 * Czech: {{t|cs|pobodat}}, {{t|cs|bodnout|pf}}, {{t|cs|probodnout|pf}}
+* Danish: {{t|da|stikke}}
 * Dutch: {{t+|nl|steken}}
 * Finnish: {{t+|fi|puukottaa}}
 * French: {{t+|fr|poignarder}}, {{t|fr|frapper d'un coup de couteau}}
