--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -125,6 +125,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Marathi: {{t|mr|कॅच|m|tr=kǎca|sc=Deva}}
 * Portuguese: {{t+|pt|pegar}}, {{t|pt|apanhadura|f}}, {{t|pt|apanhada|f}}
 * Russian: {{t+|ru|пои́мка|f}}, {{t+|ru|захва́т|m}}
+* Slovak: {{t|sk|chytiť}}, {{t|sk|chytať}}
 * Swahili: {{t+|sw|daka}}
 * Swedish: {{t+|sv|fångst|c}}
 {{trans-bottom}}
@@ -150,6 +151,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{trans-mid}}
 * Italian: {{t+|it|fermaglio}}, {{t|it|fermaglio di sicurezza}}
 * Portuguese: {{t+|pt|tranca|f}}, {{t+|pt|tranqueta|f}}, {{t+|pt|fecho|m}}
+* Slovak: {{t+|sk|zámok}}
 * Swedish: {{t|sv|hasp|c}}, {{t+|sv|hake|c}}
 {{trans-bottom}}
 
