--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -20,7 +20,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-Modern form is a compound of {{zh-l|*音}} and {{zh-l|*心|heart}}. However, the top component is etymologically unrelated to {{zh-l|*音}}.
+Modern form is a compound of {{zh-l|*音}} and {{zh-l|*心|heart}}. However, the top component is etymologically unrelated to {{zh-l|*音}}. {{rfv-sense|zh}}
 
 ===Pronunciation===
 {{zh-pron
