--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -202,19 +202,19 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see b
 }}
 
 =====Translations=====
-{{trans-top|amount of money, time, etc.}}
+{{trans-top|amount of money spent for a purpose}}
 * Armenian: {{t+|hy|ծախս|sc=Armn}}
 * Asturian: {{t|ast|costu|m}}
 * Basque: {{t|eu|kostu}}
-* Bulgarian: {{t+|bg|цена|f}}
-* Catalan: {{t+|ca|preu|m}}, {{t+|ca|cost|m}}
+* Bulgarian: {{t+|bg|разноски}}
+* Catalan: {{t+|ca|cost|m}}
 * Chamicuro: {{t|ccc|iso'no}}
 * Chinese:
 *: Mandarin: {{t+|cmn|費用|sc=Hani}}, {{t+|cmn|费用|tr=fèiyòng|sc=Hani}}, {{t+|cmn|成本|tr=chéngběn|sc=Hani}}, {{t+|cmn|花費|sc=Hani}}, {{t+|cmn|花费|tr=huāfèi|sc=Hani}}
-* Czech: {{t+|cs|náklad|m}}, {{t+|cs|cena|f}}
+* Czech: {{t+|cs|náklad|m}}
 * Danish: {{t|da|omkostninger}}
 * Dutch: {{t+|nl|kost}}
-* Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
+* Finnish: {{t+|fi|kustannus}}
 * French: {{t+|fr|coût|m}}, {{t+|fr|frais|m}}
 * Friulian: {{t|fur|cost|m}}
 * Galician: {{t+|gl|custo|m}}
@@ -238,20 +238,22 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see b
 * Mongolian: {{t+|mn|өртөг}}
 * Norman: {{t|nrf|couôtage|m}}, {{t|nrf|couôtement|m}}
 * Norwegian:
-*: Bokmål: {{t+|nb|omkostninger|pl}}
+*: Bokmål: {{t+|nb|omkostninger}}
 *: Nynorsk: {{t|nn|kostnad|m}}
 * Novial: {{t|nov|kosto}}
 * Polish: {{t+|pl|koszt|m}}
 * Portuguese: {{t+|pt|custo|m}}
-* Romanian: {{t+|ro|cost}}, {{t+|ro|preț}}
-* Russian: {{t+|ru|сто́имость|f}}, {{t+|ru|себесто́имость|f}}, {{t+|ru|цена́|f}}, {{t+|ru|затра́ты|f-p}}, {{t+|ru|расхо́ды|m-p}}
-* Scottish Gaelic: {{t|gd|cosgais|f}}, {{t|gd|prìs|f}}, {{t|gd|cosg|m}}
-* Spanish: {{t+|es|costo|m}}
+* Romanian: {{t+|ro|cost}}
+* Russian: {{t+|ru|расхо́ды|m-p}}
+* Scottish Gaelic: {{t|gd|cosgais|f}}, {{t|gd|cosg|m}}
+* Serbo-Croatian: {{t+|sh|trošak|m}}
+* Slovak: {{t+|sk|náklad|m}}
+* Spanish: {{t+|es|costa|f}}, {{t+|es|gasto|m}}, {{t+|es|costo|m}}
 * Swahili: {{t+|sw|gharama}}
 * Swedish: {{t+|sv|kostnad|c}}
 * Tagalog: {{t+|tl|halaga}}
 * Thai: {{t-needed|th}}
-* Turkish: {{t-needed|tr}}
+* Turkish: {{t+|tr|masraf}}
 * Tuvan: {{t|tyv|өртек}}
 {{trans-bottom}}
 
