--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -91,7 +91,7 @@ The correct sentence is
 Here, {{zh-l|很}} is used as a filler to link a noun and an adjective and is not interpreted as "very".
 
 A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的|tr=de}} after the adjective to turn it into a noun.
-: {{zh-x|那 隻 猫 是 黑 的|This cat is black (This cat is a black one)}}}}
+: {{zh-x|那 隻 貓 是 黑 的|This cat is black (This cat is a black one)}}}}
 
 ====Synonyms====
 {{zh-dial|這}}
