--- a/en/垅/垅.13064.wikitext
+++ b/en/垅/垅.13064.wikitext
@@ -14,4 +14,4 @@
 {{zh-see|壠}}
 
 ===Usage notes===
-The first and second editions of ''{{w|Xiandai Hanyu Guifan Cidian}}'' ({{w2|zh|pref=《|现代汉语规范词典|suf=》}}) view the character '{{lang|zh|垅}}' as the simplified form of the character '{{zh-l|壠|lǒng}}' and as identical in meaning to the character '{{zh-l|*垄}}', referred to as the normative modern form. In the first edition, use of the character '{{lang|zh|垅}}' in the word '{{zh-l|壟斷}}' is proscribed. The third edition does not include the character '{{lang|zh|垅}}' and states that the character '{{zh-l|壠|lǒng}}' is written as the character '{{lang|zh|垄}}' in modern normative usage.
+See usage notes for '{{zh-l|壠|lǒng}}'.
