--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -1,7 +1,7 @@
 {{also|Olive}}
 ==English==
 {{wikipedia}}
-[[File:Olea_europaea1.jpg|thumb|a typical '''olive''' tree ({{taxlink|Olea europaea|species|noshow=1|ver=161227}}) (1)]]
+[[File:Olea_europaea1.jpg|thumb|a typical '''olive''' tree (''[[Olea europaea]]'') (1)]]
 
 ===Etymology===
 From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|ett|𐌄𐌋𐌄𐌉𐌅𐌀|tr=eleiva|sc=Ital}} or Proto-Greek {{m|grc|*ἐλαίϝα}}, ultimately from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
