--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -45,7 +45,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 =====Translations=====
 {{trans-top|to incur a charge, a price}}
 * Abkhaz: {{t-needed|ab}}
-* Arabic: {{t|ar|سَاوَى}}
+* Arabic: {{t|ar|سَاوَى}}, {{t|ar|ﻛَﻠَّﻒَ}}
 * Armenian: {{t+|hy|արժենալ}}, {{t|hy|արժեմ}}
 * Asturian: {{t|ast|costar}}
 * Avar: {{t-needed|av}}
