--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -302,7 +302,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Old English: {{t|ang|butere|f}}
 * Osage: {{t|osa|paazénii wéli}}
 * Ossetian: {{t|os|нӕлхӕ}}
-* Ottoman Turkish: {{t|ota|تره‌یاغی|tr=tereyağı}}, {{t|ota|ياغ|tr=yağ}}
+* Ottoman Turkish: {{t|ota|تره‌یاغی|tr=tereyağı}}, {{t|ota|یاغ|tr=yağ}}
 * Pennsylvania German: {{t|pdc|Budder|m}}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
