t+sw:[[fyonza]] ([[WT:EDIT|Assisted]]) <suck#53254165>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -38,6 +38,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Italian: {{t+|it|succhiata|f}}, {{t|it|sorsata|f}}
 {{trans-mid}}
 * Persian: {{t+|fa|مک|tr=mak|sc=fa-Arab}}, {{t+|fa|میک|tr=mik|sc=fa-Arab}} {{qualifier|colloquial}}
+* Swahili: {{t|sw|fyonza}}
 {{trans-bottom}}
 
 {{trans-see|sycophant}}
