--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -56,6 +56,9 @@ Compare {{cog|sco|came||comb}}, {{m|sco|caim||comb}}, and {{cog|enm|camet||silve
 {{trans-mid}}
 {{trans-bottom}}
 
+===References===
+* {{R:OneLook}}
+
 ===Anagrams===
 * {{anagrams|en|a=acem|ACME|Acme|ECMA|EMAC|Mace|Mače|acme|eMac|mace}}
 
