--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -11,7 +11,7 @@
 ===Proper noun===
 {{en-proper noun|head=the [[united|United]] [[states|States]] [[of]] [[America]]}}
 
-# {{senseid|en|Q30}}A country in [[North America]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories. Formally declared independence in 1776 with the ratification of the Declaration of Independence.
+# {{senseid|en|Q30}}A country in [[North America]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories.
 #: {{ux|en|Mexico and Canada border the '''United States of America'''.}}
 
 ====Synonyms====
