# {{lb|en|intransitive|AAVE|slang}} To covertly [[have sex]] with (a person other than one's primary partner); to [[cheat]] ''with''. #* '''2000''', Shaggy, ''It Wasn't Me'' (song) #*: Honey came in and she caught me red-handed / '''Creeping''' with the girl next door / Picture this we were both butt naked / Banging on the bathroom floor #* '''2003''', Mario Winans, ''I Don't Wanna Know'' #*: I don't wanna know / If you're playin' me, keep it on the low / 'Cause my heart can't take it anymore / <creep#53286610>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -33,6 +33,13 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 # To have a sensation as of insects creeping on the skin of the body; to crawl.
 #: {{uxi|en|The sight made my flesh '''creep'''.}}
 # To drag in deep water with [[creeper]]s, as for recovering a submarine cable.
+# {{lb|en|intransitive|AAVE|slang}} To covertly [[have sex]] with (a person other than one's primary partner); to [[cheat]] ''with''.
+#* '''2000''', Shaggy, ''It Wasn't Me'' (song)
+#*: Honey came in and she caught me red-handed / '''Creeping''' with the girl next door / Picture this we were both butt naked / Banging on the bathroom floor
+#* '''2003''', Mario Winans, ''I Don't Wanna Know''
+#*: I don't wanna know / If you're playin' me, keep it on the low / 'Cause my heart can't take it anymore / And if you're '''creepin'''', please don't let it show
+#* '''2016''', Sherika Moore, ''Been Hustlen''
+#*: "Now you want the nigga out 'cause he '''creeping''' with his baby momma."
 
 =====Derived terms=====
 {{der-top}}
