/* Noun */Added content to clarify contemporary usage not obsolete <cost#53288730>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -322,6 +322,7 @@ From {{der|en|fro|coste}}, from {{der|en|la|costa}}.
 # {{lb|en|obsolete}} A rib; a side.
 #* Ben Jonson
 #*: betwixt the '''costs''' of a ship
+# intercostal
 # {{lb|en|heraldry}} A [[cottise]].
 
 ===Anagrams===
