--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -138,6 +138,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * Spanish: {{t+|es|flotar}}
 * Sundanese: {{t|su|ngambang}}
 * Swedish: {{t+|sv|flyta}}
+* Ukrainian: {{t+|uk|[[трима́тися]] [[на]] [[воді́]]|impf}}
 * Vietnamese: {{t+|vi|nổi}}
 {{trans-bottom}}
 
