--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -106,7 +106,7 @@ The ''[[漢音#Japanese|kan'on]]'' pronunciation, so likely a later borrowing.
 # {{hanja form of|영|to [[shine]]; [[light]] [[up]]; [[reflect]]; [[flash]]}}
 
 ====Compounds====
-* {{ko-l|영화|映畫}}
+* {{ko-l|영화|映畫|film, flick, movie}}
 
 ----
 
