/* Chinese */ 深圳 http://dict.revised.moe.edu.tw/cgi-bin/cbdic/gsweb.cgi?o=dcbdic&searchid=W00000007876 |m=zùn,chóu http://dict.revised.moe.edu.tw/cgi-bin/cbdic/gsweb.cgi?o=dcbdic&searchid=W00000008342 ====Compounds==== {{zh-der|八堡圳|嘉南大圳}} http://dict.revised.moe.edu.tw/cgi-bin/cbdic/gsweb.cgi?o=dcbdic&searchid=W00000009680 <圳#53300734>

--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -30,18 +30,22 @@
 
 # [[furrow]] in a [[field]], small [[drainage]] in a field
 ====Compounds====
-{{zh-der|圳溝|嘉南大圳}}
+{{zh-der|圳溝|嘉南大圳|深圳}}
 
 ===Pronunciation 2===
 {{zh-see|畎|v}}
 ===Pronunciation 3===
 {{zh-pron
-|m=chóu
+|m=zùn,chóu
 }}
 ====Definitions====
 {{zh-hanzi}}
 
 # {{uncertain|zh|nohypothesis=1}}
+
+====Compounds====
+{{zh-der|八堡圳|嘉南大圳}}
+
 ===Pronunciation 4===
 {{zh-pron
 |m=huái
