--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -110,7 +110,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Occitan: {{t+|oc|cortina|f}}
 * Pashto: {{t+|ps|پرده|tr=parda}}, {{t+|ps|پېڅول|tr=paissawal }}
 * Persian: {{t+|fa|پرده|tr=parde}}
-* Polish: {{t+|pl|zasłona|f}}, {{t+|pl|kurtyna|f}}
+* Polish: {{t+|pl|zasłona|f}}, {{t+|pl|kurtyna|f}}, {{t+|pl|firana|f}}, {{t+|pl|firanka|f}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Punjabi:
 *: Gurmukhi: {{t|pa|ਪਰਦਾ|tr=pardā}}
