--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -59,7 +59,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * Persian: {{t|fa|خنجر زدن}}
 * Portuguese: {{t+|pt|punhalada|f}}
 * Russian: {{t+|ru|уда́р|m}}, {{t+|ru|уко́л|m}}
-* Spanish: {{t+|es|puñalada|f}} (general), {{t+|es|cuchillada|f}}
+* Spanish: {{t+|es|puñalada|f}} (general), {{t+|es|cuchillada|f}}, {{t|es|acuchillamiento|m}}
 * Sundanese: {{t|su|tewek}}
 * Swedish: {{t+|sv|hugg|n}}, {{t+|sv|stick|n}}
 {{trans-bottom}}
