/* Verb */ # {{lb|en|intransitive}} Of colours or other design elements: to [[clash]]; to fail to [[harmonize]]. #* '''2013''', Ian G. Clifton, ''Android User Interface Design'' #*: The higher the saturation, the more the colors '''fight''', and the more users will be looking at your design instead of your content. <fight#53304016>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -43,7 +43,10 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 #: {{ux|en|The government pledged to '''fight''' corruption.}}
 #* {{quote-text|lang=en|year=2014|author=Ann Aguirre|title=The Shape of My Heart|page=42|passage=I '''fought''' a sneeze as Max took my hand and led me into the chapel.}}
 # {{lb|en|transitive|archaic}} To cause to fight; to manage or manoeuvre in a fight.
-#: {{ux|en|to '''fight''' cocks;&emsp; to '''fight''' one's ship}}
+#: {{ux|en|to '''fight''' cocks; to '''fight''' one's ship}}
+# {{lb|en|intransitive}} Of colours or other design elements: to [[clash]]; to fail to [[harmonize]].
+#* '''2013''', Ian G. Clifton, ''Android User Interface Design''
+#*: The higher the saturation, the more the colors '''fight''', and the more users will be looking at your design instead of your content.
 
 ====Synonyms====
 * See also [[Thesaurus:fight]]
