--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -435,14 +435,15 @@ The meaning of ''semen or female ejaculatory discharge'' is considered vulgar sl
 ====Preposition====
 {{en-prep}}
 
-# {{non-gloss definition|Used to indicate an event, period, or change in state occurring after a present time.}}
+# {{non-gloss definition|Used to indicate a point in time at or after which a stated event or situation occurs.}}
 #: ''Leave it to settle for about three months and, '''come''' Christmas time, you'll have a delicious concoction to offer your guests.''
 #: '''''Come''' retirement, their Social Security may turn out to be a lot less than they counted on.''
 #* {{quote-journal|lang=en|date=November 10 2012|author=Amy Lawrence|title=Fulham's Mark Schwarzer saves late penalty in dramatic draw at Arsenal|newspaper=The Guardian|url=http://www.guardian.co.uk/football/2012/nov/10/arsenal-fulham-premier-league}}
+#: '''''Come''' summer, we would all head off to the coast.''
 #*: '''Come''' the final whistle, Mikel Arteta lay flabbergasted on the turf.
 
 =====Usage notes=====
-* {{m|en|came#Preposition|Came}} is sometimes used when the event occurred in the past.
+* {{m|en|came#Preposition|Came}} is sometimes used instead when the events occurred in the past.
 
 ====Interjection====
 {{en-interj}}
