--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -65,6 +65,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Finnish: {{t+|fi|maksaa}}
 * French: {{t+|fr|coûter}}, {{t+|fr|couter}}
 * Friulian: {{t|fur|costâ}}
+* Gallo: {{t|roa-gal|cóstaer}}
 * Galician: {{t|gl|custar}}
 * Georgian: {{t|ka|ღირს}}
 * German: {{t+|de|kosten}}
