--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -22,7 +22,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 * {{homophones|lang=en|cum}}
 
 ====Verb====
-{{en-verb|comes|coming|came|come|past2=come|past2_qual=archaic|past_ptc2=comen|past_ptc2_qual=rare}}
+{{en-verb|comes|comming|came|come|past2=come|past2_qual=archaic|past_ptc2=comen|past_ptc2_qual=rare}}
 
 # {{lb|en|intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #: {{ux|en|She’ll be '''coming''' ’round the mountain when she '''comes'''{{...}}}}
