--- a/en/坦/坦.13033.wikitext
+++ b/en/坦/坦.13033.wikitext
@@ -76,7 +76,7 @@
 {{vi-readings|rs=坦00
 |hanviet=thản-Thiều Chửu (1942); gdhn; Trần Văn Chánh (1999)
 |phienthiet=
-|nom=đất-tdcndg; tdcndg
+|nom=đất-tdcndg; tdcntd
 }}
 ====Sino-Vietnamese Compounds====
 * {{l|vi|坦然|tr=[[thản nhiên]]}}
