--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -293,12 +293,14 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 # A wager that results in no loss or gain for the bettor as a result of a tie or even score
 # {{lb|en|computing}} The addition of a data item to the top of a [[stack]].
 # {{lb|en|Internet|uncountable}} The situation where a [[server]] sends data to a [[client]] without waiting for a request, as in ''server push'', ''push technology''.
-# {{lb|en|dated}} A [[crowd]] or [[throng]] or people
+# {{lb|en|chiefly|Australia}} A particular [[crowd]] or [[throng]] or people.
 #* '''1891''', Banjo Paterson, ''[[s:An Evening in Dandaloo|An Evening in Dandaloo]]''
 #*: Till some wild, excited person
 #*: Galloped down the township cursing,
 #*: "Sydney '''push''' have mobbed Macpherson,
 #*: Roll up, Dandaloo!"
+#*'''1994''', {{w|David Malouf}}, ''A First Place'', Vintage 2015, p. 37:
+#*:My father […] was soon as unambiguously Australian as any other member of the rough Rugby '''pushes''' that in the years before the Great War made up the mixed and liverly world of South Brisbane.
 # {{lb|en|snooker}} A foul shot in which the [[cue ball]] is in contact with the [[cue]] and the [[object ball]] at the same time
 
 =====Derived terms=====
