--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -7,7 +7,7 @@
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|/juːˌnaɪ.tɪd ˈkɪŋ.dəm/|/jʊˌnaɪ.tɪd ˈkɪŋ.dəm/|/jəˌnaɪ.tɪd ˈkɪŋ.dəm/|lang=en}}
-* {{audio|en-us-United Kingdom.ogg|Audio (US)|lang=en}}
+* {{audio|en-us-United Kingdom.ogg|Audio (US)|lang=en|}}
 
 ===Proper noun===
 {{en-proper noun|head=[[united|United]] [[kingdom|Kingdom]]}}
