--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -294,7 +294,7 @@ From {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m|enm|
 ====Noun====
 {{en-noun|~}}
 
-# An act of pulling (applying force)
+# An act of [[pulling]] (applying force)
 #: {{ux|en|He gave the hair a sharp '''pull''' and it came out.}}
 #* Jonathan Swift
 #*: I awakened with a violent '''pull''' upon the ring which was fastened at the top of my box.
