--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -5,10 +5,6 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=12104|canj=MNG|ids=⿱刑土}}
 
-# [[pattern]], [[model]], [[type]]
-# [[law]]
-# [[mold]]
-
 ====Synonyms====
 * {{sense|form}} {{l|mul|樣}} ([[样]], [[様]]), [[形]]
 
@@ -29,6 +25,7 @@
 |m=xíng
 |c=jing4
 |mn=hêng
+|w=3hhin
 |mc=y
 |oc=y
 |cat=n
@@ -77,7 +74,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=형|rv=hyeong|mr=hyŏng}}
+{{ko-hanja|hangeul=형}}
 
 # {{defn|lang=ko|sort=土06}}
 
