--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -1,6 +1,6 @@
 {{also|CREEP}}
 ==English==
-
+Nurul is the real definition 
 ===Pronunciation===
 * {{enPR|krēp}}, {{IPA|/kɹiːp/|[kʰɹiːp]|lang=en}}
 * {{audio|en-us-creep.ogg|Audio (US)|lang=en}}
@@ -153,22 +153,7 @@ From the above verb.
 {{der-top|gradual expansion or proliferation, negatively}}
 * {{l|en|bracket creep}}
 * {{l|en|Christmas creep}}
-* {{l|en|Coble creep}}
-* {{l|en|diffusion creep}}
-* {{l|en|dislocation creep}}
-* {{l|en|feature creep}}
-{{der-mid}}
-* {{l|en|focus creep}}
-* {{l|en|function creep}} (<!--until defined-->{{w|function creep}})
-* {{l|en|instruction creep}} (<!--until defined-->{{w|instruction creep}})
-* {{l|en|mission creep}} (<!--until defined-->{{w|mission creep}})
-* {{l|en|Nabarro-Herring creep}}
-* {{l|en|requirement creep}} (<!--until defined-->{{w|requirement creep}})
-* {{l|en|scope creep}}
-* {{l|en|season creep}}
-{{der-bottom}}
-
-{{der-top|A frightening and/or disconcerting person}}
+* {{l|en
 * {{l|en|creep-shame}}
 {{der-bottom}}
 
