--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -2,26 +2,27 @@
 
 ===Etymology===
 {{PIE root|en|keh₂p}}
-From {{inh|en|enm|cacchen}}, from {{der|en|xno|cachier}}, from {{der|en|LL.|captiāre}}, present active infinitive of {{m|la|captiō}}, from {{der|en|la|captō}}, frequentative of {{m|la|capiō}}. Akin to Modern {{cog|fr|chasser}} (from {{cog|fro|chacier}}) and {{cog|es|cazar}}, and thus a {{doublet|en|chase|nocap=1}}. Displaced {{cog|enm|fangen}} {{gloss|"to catch"; > Modern English {{l|en|fang|pos=verb}}}}, from {{cog|ang|fōn||to seize, take}}; {{cog|enm|lacchen}} {{gloss|"to catch"; > Modern English {{l|en|latch}}}}, from {{cog|ang|læċċan}}.
+From , from , from , present active infinitive of {{m|la|captiō}}, from {{der|en|la|captō}}, frequen
+tative of {{m|la|capiō}}. Akin to Modern {{cog|fr|chasser}} (from {{cog|fro|chacier}}) and {{cog|es|cazar}}, and thus a {{doublet|en|chase|nocap=1}}. Displaced {{cog|enm|fangen}} {{gloss|"to catch"; > Modern English {{l|en|fang|pos=verb}}}}, from {{cog|ang|fōn||to seize, take}};  {{gloss|"to catch"; > Modern English {{l|en|latch}}}}, from {{cog|ang|læċċan}}.
 
-The verb became irregular, possibly under the influence of the semantically similar {{m|en|latch}} (from {{cog|ang|læċċan}}) whose past tense was {{m|enm|lahte}}, {{m|enm|lauhte}}, {{m|en|laught}} ({{cog|ang|læhte}}) until becoming regularised in Modern English.
+The verb became irregular, possibly under the influence of the semantically similar {{m|en|latch}} (from {{cog|ang|læċċan}}) whose past tense was {{m|enm|lahte}}, {{m|enm|lauhte}}, {{m|en|laught}} ({{cog|ang|læhte}}) until becoming regularised in Modern [[English]].
 
 ===Pronunciation===
-* {{enPR|kăch|kĕch}}, {{IPA|/kæt͡ʃ/|/kɛt͡ʃ/|lang=en}}
-* {{audio|en-us-catch.ogg|Audio (US)|lang=en}}
-* {{audio|en-au-catch.ogg|Audio (AU)|lang=en}}
+* , 
+* 
+* 
 * {{audio|LL-Q1860 (eng)-Nattes à chat-catch.wav|Audio|lang=en}}
 * {{rhymes|ætʃ|lang=en}}, {{rhymes|ɛtʃ|lang=en}}
 
 Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular or common pronunciation."<ref>[http://edl.byu.edu/webster/c/47 Noah Webster, An American Dictionary of the English Language, 1828. byu.edu].</ref> It is labeled "not infreq[uent]" in Kenyon & Knott (1949).<ref>[https://archive.org/stream/pronouncingdicti00unse#page/72/mode/2up Kenyon & Knott, ''A Pronouncing Dictionary of American English''. archive.org]</ref>
 
 ===Noun===
-{{en-noun|~|es}}
+<br />
 
 # {{lb|en|countable}} The act of [[seizing]] or [[capture|capturing]]. {{jump|act of capturing|s}}
-#: ''The '''catch''' of the perpetrator was the product of a year of police work.''
-# {{lb|en|countable}} The act of catching an [[object]] in motion, especially a [[ball]]. {{jump|catching a ball|s|t}}
-#: ''The player made an impressive '''catch'''.''
+#:''The '''catch''' of the perpetrator was theproduct of a year of police work.''
+# The act of catching an object in motion, especially a ball. 
+#:''The player made an impressive '''catch'''.''
 #: ''Nice '''catch'''!''
 # {{lb|en|countable}} The act of noticing, [[understand]]ing or hearing. {{jump|act of noticing|s|t}}
 #: ''Good '''catch'''. I never would have remembered that.''
