--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -213,7 +213,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Russian: {{t+|ru|желу́док|m}}, {{t+|ru|живо́т|m}}
 * Rusyn: {{t|rue|жалу́док|m}}
 * Sabah Bisaya: {{t|bsy|tinai'}}
-* Sanskrit: {{t+|sa|उदरम्|n}}
+* Sanskrit: {{t+|sa|उदरम्|n}}, {{t+|sa|उदर|m}}
 * Sardinian: {{t-needed|sc}}
 * Scottish Gaelic: {{t|gd|brù|f}}
 * Serbo-Croatian:
