--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -92,7 +92,7 @@
 * Greenlandic: {{t|kl|Naalagaaffeqatigiit}}
 * Guaraní: {{t|gn|Tetã peteĩ reko Amérikagua}}
 * Gujarati: {{t|gu|સંયુકત રાજ્ય અમેરિકા}}
-* Haryani: {{t|bgc|अ़मरेख्यासांजुक्ट्टराजये}}, {{t|bgc|सांजुक्ट्टराजये}}
+* Haryanvi: {{t|bgc|अ़मरेख्यासांजुक्ट्टराजये}}, {{t|bgc|सांजुक्ट्टराजये}}
 * Hausa: {{t|ha|Tarayyar Amurka}}
 * Hawaiian: {{t|haw|ʻAmelika Huipūʻia}}, {{t|haw|ʻAmelika Hui}}
 * Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}
