--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -461,7 +461,7 @@ See {{m|en|comma}}.
 ====Noun====
 {{en-noun}}
 
-# {{label|en|typography|obsolete}} {{alternative form of|comma|lang=en|nodot=1}} ''in its [[medieval]] [[use]] as a [[middot]]'' ⟨[[·]]⟩ ''[[serving]] as a [[form]] of [[colon]].''
+# {{senseid|en|typography}} {{label|en|typography|obsolete}} {{alternative form of|comma|lang=en|nodot=1}} ''in its [[medieval]] [[use]] as a [[middot]]'' ⟨[[·]]⟩ ''[[serving]] as a [[form]] of [[colon]].''
 #* '''1824''', J. Johnson, ''Typographia'':
 #*: There be five manner of points and divisions most used among cunning men; the which if they be well used, make the sentence very light and easy to be understood, both to the reader and hearer: and they be these, [[virgil]],—[[come]],—[[parenthesis]],—[[plain point]],—[[interrogative]].
 #* '''1842''', F. Francillon, ''[https://books.google.co.jp/books?id=MGj0VSJkwdIC&printsec=frontcover An Essay on Punctuation]'', [https://books.google.co.jp/books?id=MGj0VSJkwdIC&pg=PA9 page 9]:
