--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -9,7 +9,7 @@
 *** {{audio|En-uk-butter.ogg|Audio (RP)|lang=en}}
 *** {{a|GA}} {{IPA|/ˈbʌtɚ/|[ˈbʌɾɚ]|lang=en}}
 *** {{audio|en-us-butter.ogg|Audio (GA)|lang=en}}
-*** {{a|Scotland|Wales}} {{IPA|/ˈbʌtɚ/|[ˈbʌʔɚ]|lang=en}}
+*** {{a|Scotland|Wales}} {{IPA|/ˈbʌtɚ/|[ˈbʌʔɚ]|/ˈbʌtɻ/|lang=en}}
 ** {{rhymes|ʌtə(ɹ)|lang=en}}
 * {{a|Northern England|Midlands}} {{IPA|/ˈbʊtə/|lang=en}}
 ** {{rhymes|ʊtə(ɹ)|lang=en}}
