--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -91,6 +91,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 *: Min Nan: {{t+|nan|媠|tr=súi|sc=Hani}}, {{t+|nan|美麗|sc=Hani}}, {{t|nan|美丽|tr=bí-lē|sc=Hani}}, {{t|nan|好看|tr=hó-khòaⁿ|sc=Hani}}, {{t+|nan|媠噹噹|sc=Hani}}, {{t|nan|媠当当|tr=súi-tang-tang|sc=Hani}}
 *: Teochew: {{t|zhx-teo|雅|tr=ngia2}}
 * Coptic: {{t-needed|cop}}
+* Cornish: {{t|kw|teg}}
 * Czech: {{t+|cs|krásný}}, {{t+|cs|pěkný}}
 * Dalmatian: {{t|dlm|bial}}
 * Danish: {{t+|da|smuk}}
@@ -130,6 +131,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Khanty: {{t|kca|хурамӑӈ}} {{qualifier|Kazym}}
 * Khmer: {{t+|km|ស្អាត}}, {{t+|km|ល្អ}}
 * Korean: {{t+|ko|아름답다}}
+* Kunigami: {{t|xug|清ーらせん|tr=すーらせん, sūrasen}}
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t+|ku|ئێسک سووک}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
@@ -143,6 +145,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Lü: {{t|khb|ᦇᦱᧄ|sc=Talu}}
 * Macedonian: {{t|mk|убав}}, {{t|mk|прекрасен}}
 * Malay: {{t|ms|cantik}}, {{t|ms|indah}}, {{t|ms|molek}}
+* Manx: {{t|gv|aalin}}, {{t|gv|bwaagh}}, {{t|gv|bwoyagh}}
 * Maori: {{t|mi|waiwaiā }}, {{t|mi|pīwari }}, {{t|mi|hūmārie }}, {{t|mi|hūmārire }}, {{t|mi|purotu }}, {{t|mi|rerehua }}, {{t+|mi|tau }}, {{t|mi|ātanga }}, {{t|mi|ātaahua }}
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
 * Mongolian: {{t+|mn|сайхан|sc=Cyrl}}, {{t+|mn|гуа}}
@@ -193,6 +196,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Tatar: {{t|tt|матур|sc=Cyrl}}, {{t|tt|гүзәл|sc=Cyrl}}
 * Telugu: {{t+|te|అందమైన}}, {{t+|te|చక్కని}}
 * Thai: {{t|th|สุนทร}}, {{t+|th|สวย}}, {{t+|th|งาม}}
+* Toku-No-Shima: {{t|tkn|清らさい|tr=きゅらさい, kyurasai}}
 * Tswana: {{t|tn|-ntle}}
 * Turkish: {{t+|tr|güzel}}
 * Turkmen: {{t|tk|görmegeý}}, {{t|tk|gözel}}, {{t|tk|gelşikli}}
