/* Verb */ # {{lb|en|transitive}} To spread [[plaster]] over (a surface), using the tool called a float. #* '''1932''', ''The Bricklayer, Mason and Plasterer'' (volumes 35-37, page 35) #*: This wire, nailed over the face of the old plaster will also reinforce any loose lath or plaster after the walls have set. '''Float''' the wall to the face of the lath first. <float#53490177>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -53,7 +53,10 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 #* '''2007''', Jonathan Reuvid, '''''Floating''' Your Company: The Essential Guide to Going Public''.
 #* '''2011''', Stockholm International Peace Research Institute, ''SIPRI Yearbook 2011: Armaments, Disarmament and International Security'', footnote i, [http://books.google.com.au/books?id=QxlLztBtavEC&pg=PA269&dq=%22floated%22|%22floating%22+shares+OR+company+OR+corporate+OR+corporation+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=QJ5UT_jAI-_0mAXSvvSqCg&redir_esc=y#v=onepage&q=%22floated%22|%22floating%22%20shares%20OR%20company%20OR%20corporate%20OR%20corporation%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 269],
 #*: As a result of this reverse acquisition, Hurlingham changed its name to Manroy plc and '''floated''' shares on the Alternative Investment Market in London.
-# {{lb|en|transitive}} To use a float (tool).
+# {{lb|en|transitive}} To spread [[plaster]] over (a surface), using the tool called a float.
+#* '''1932''', ''The Bricklayer, Mason and Plasterer'' (volumes 35-37, page 35)
+#*: This wire, nailed over the face of the old plaster will also reinforce any loose lath or plaster after the walls have set. '''Float''' the wall to the face of the lath first.
+# {{lb|en|transitive}} To use a float (rasp-like tool) upon.
 #: ''It is time to '''float''' this horse's teeth.''
 # {{lb|en|poker}} To perform a [[float#Noun|float]].
 # {{lb|en|computing|transitive}} To cause (an [[element]] within a [[document]]) to float above or beside others.
