--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -80,7 +80,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Adyghe: {{t|ady|шыблэ}}
 * Albanian: {{t+|sq|bubullimë|f}}, {{t|sq|mumrimë|f}}
 * Arabic: {{t+|ar|رَعْد|m}}
-*: Egyptian Arabic: {{t|arz|رعد|m|tr=raʿd|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|رعد|m|tr=raʿd}}
 *: Moroccan Arabic: {{t|ary|رْعدة|f|tr=rʿəda}}
 * Armenian: {{t+|hy|որոտ}}
 * Asturian: {{t|ast|troníu|m}}, {{t|ast|tronabríu|m}}, {{t|ast|tronada|f}}, {{t|ast|truenu|m}}, {{t+|ast|renuberu|m}}
