/* Verb */ # {{lb|en|obsolete|transitive}} To [[turn]] the stomach of; to [[sicken]] or [[repel]]. <stomach#53568484>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -398,6 +398,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 #*: The lion began to show his teeth, and to '''stomach''' the affront.
 #* {{rfdate||and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
 #*: The Parliament sit in that body {{...}} to be his counsellors and dictators, though he '''stomach''' it.
+# {{lb|en|obsolete|transitive}} To [[turn]] the stomach of; to [[sicken]] or [[repel]].
 
 ====Synonyms====
 * {{sense|to tolerate}} {{l|en|brook}}, {{l|en|put up with}}; See also [[Thesaurus:tolerate]]
