--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -148,7 +148,7 @@ From {{inh|nl|dum|het}}, {{m|dum|hit}}, from {{inh|nl|odt|it}}, {{m|odt|hit}}, f
 
 =====Usage notes=====
 * This pronoun can combine with a preposition to form a [[pronominal adverb]]. When this occurs, it is changed into its adverbial/locative counterpart {{m|nl|er}}. See also [[:Category:Dutch pronominal adverbs]].
-* In a double-object construction with another pronoun, {{m|nl||het}} is always the direct object but generally precedes the other pronoun: {{m|nl||Geef het hem terug!|Give it back to him!}}. Compare regional English {{m|en||Give it him back!}}. This is different from other neuter pronouns, which usually follow the indirect object: {{m|de||Geef hem dat terug!|Give that back to him!}}
+* In a double-object construction with another pronoun, {{m|nl||het}} is generally the direct object but precedes the other pronoun: {{m|nl||Geef het hem terug!|Give it back to him!}}. Compare regional English {{m|en||Give it him back!}}. This is different from other neuter pronouns, which usually follow the indirect object: {{m|de||Geef hem dat terug!|Give that back to him!}}
 
 =====See also=====
 {{nl-decl-personal pronouns}}
