--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -317,7 +317,8 @@ From {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m|enm|
 # {{lb|en|obsolete|poetic}} Loss or violence suffered.
 #* Shakespeare
 #*: Two '''pulls''' at once; / His lady banished, and a limb lopped off.
-# {{lb|en|slang}} The act of drinking.
+# {{lb|en|slang}} The act of drinking; a [[mouthful]] or [[swig]] of a drink.
+#* {{quote-book|lang=en|year=1996|author=Jon Byrell|title=Lairs, Urgers and Coat-Tuggers|publisher=Ironbark|location=Sydney|page=294|passage=Sutho took a '''pull'' at his Johnny Walker and Coke and laughed that trademark laugh of his and said: `Okay. I'll pay that all right.'}}
 #: ''to take a pull at a mug of beer''
 #: {{rfquotek|Charles Dickens}}
 # {{lb|en|cricket}} A kind of stroke by which a leg ball is sent to the off side, or an off ball to the side.
