--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -226,7 +226,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 #*: But bleakness still '''curtained''' the gray horizon.
 
 ====Synonyms====
-* {{l|en|becurtain}}
+* {{l|en|becurtain}}, {{l|en|screen}}, {{l|en|divider}}
 
 ====Translations====
 {{trans-top|to cover with a curtain}}
