--- a/en/倱/倱.11061.wikitext
+++ b/en/倱/倱.11061.wikitext
@@ -51,3 +51,12 @@
 {{ko-hanja|hangeul=혼|rv=hon|mr=hon}}
 
 # {{defn|lang=ko|sort=人08}}
+
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|hỗn}}
+
+# {{defn|lang=vi|sort=人08}}
