--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -31,8 +31,11 @@
 # [[flat]] [[land]] between [[mountain]]s
 # a [[hollow]] in the [[ground]]; a [[cavity]]; [[depression]]
 
-===Usage notes===
+====Usage notes====
 * ''{{w|Xiandai Hanyu Guifan Cidian}}'' ({{w2|zh|pref=《|现代汉语规范词典|suf=》}}) proscribes the use of the pronunciation {{m|cmn|āo}}.
+
+====Synonyms====
+* {{zh-l|垇}}
 
 ===Compounds===
 {{zh-der|坳堂|坳塘|塘坳|山坳|楊家坳|松樹坳|白石坳|甘塘坳|山溪坳|馬家坳|上馬坳|茅草坳}}
