--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -31,6 +31,9 @@
 
 # [[ashamed]]; [[embarrassed]]
 
+===Usage notes===
+* ''{{w|Xiandai Hanyu Guifan Cidian}}'' ({{w2|zh|pref=《|现代汉语规范词典|suf=》}}) proscribes the use of the pronunciation {{m|cmn|cǎn}} for this character.
+
 ===Compounds===
 {{zh-der|慚惶|慚皺|慚感|大言不慚|慚赧|慚色|慚沮|慚愧無地|慚悚|慚恩|慚恨|慚恧|慚怍|慚德|慚愧|慚鳧企鶴|滿面羞慚|林慚澗愧|燕妒鶯慚|羞慚|自慚形穢|衾影無慚}}
 
