--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -233,9 +233,9 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Newari: {{t|new|जर्मनी}}
 * Norman: {{t|nrf|Allémangne|f}}
 * North Frisian: 
-*: Amrum: {{t|frr|Sjiisklun}}
-*: Föhr: {{t|frr|Tjiisklun}}
-*: Mooring: {{t|frr|Tjüschlönj}}
+*: Amrum: {{t|frr|Sjiisklun|n}}
+*: Föhr: {{t|frr|Tjiisklun|n}}
+*: Mooring: {{t|frr|Tjüschlönj|n}}
 * Northern Sami: {{t|se|Duiska}}
 * Norwegian:
 *: Bokmål: {{t+|nb|Tyskland|n}}
