--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -154,10 +154,12 @@ From {{der|ja|ltc|sort=い|-}} {{ltc-l|意}}.
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|hangeul=의|eumhun=|rv=ui|mr=ŭi|y=uy}}
+===Etymology 1===
 
-# ([[뜻]] 의, ''tteut-''): [[meaning]], [[intention]], [[signification]], [[significance]]
+===Hanja===
+{{ko-hanja|뜻|의}}
+
+# {{hanja form of|의|[[meaning]]}}
 
 ====Compounds====
 * [[意氣]] ([[의기]], uigi) [[spirit]], [[vigor]]
@@ -175,6 +177,13 @@ From {{der|ja|ltc|sort=い|-}} {{ltc-l|意}}.
 * [[意表]] ([[의표]], uipyo) [[surprise]]
 * [[意向]] ([[의향]], uihyang) [[willing]]ness, [[inclination]], [[view]]
 * [[表意]] ([[표의]], pyoui) [[ideographic]] or [[semantic]] (in contrast to [[phonetic]]) [[representation]]. cf. [[表音]] ([[표음]], ''pyoeum'')
+
+===Etymology 2===
+
+===Hanja===
+{{ko-hanja|기억하다|기억할|억}}
+
+# {{hanja form of|억|to [[remember]]}}
 
 ====See also====
 * {{l|ko|訓}} ([[새기다|새길]]_[[훈]], ''saegil_hun'') [[interpret]], [[translate]], [[explicate]], [[exegesis]]
