--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -74,7 +74,7 @@ The noun is from {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|en
 * Albanian: {{t|sq|luftën}}
 * Arabic: {{t+|ar|قَاتَلَ}}, {{t|ar|تَقَاتَلَ}}, {{t|ar|تَحَارَبَ}}, {{t|ar|حَارَبَ}}
 *: Egyptian Arabic: {{t|arz|اِتعارك|tr=etʕārek}}
-*: Iraqi Arabic: {{t|acm|تهاوش|tr=thāwaš}}
+*: Iraqi Arabic: {{t|acm|تمالخ|tr=tmālax}}
 *: Moroccan Arabic: {{t|ary|تدابز|tr=tdabəz}}
 * Aramaic:
 *: Syriac: {{t|syc|ܟܬܫ|tr=kθaš|sc=Syrc}}
