t+ar:[[وجد]] ([[WT:EDIT|Assisted]]) <find#53663422>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -231,6 +231,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 {{trans-bottom}}
 
 {{trans-top|decide that}}
+* Arabic: {{t+|ar|وَجَدَ}}
 * Armenian: {{t+|hy|գտնել}}
 * Bulgarian: {{t|bg|убеждавам се|sc=Cyrl}}
 * Czech: {{t|cs|pokládat za}}
