--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -130,6 +130,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Romanian: {{t+|ro|număra}}
 * Romansch: {{t|rm|enumerar}}, {{t|rm|dumbrar}}
 * Russian: {{t+|ru|счита́ть|impf}}, {{t+|ru|посчита́ть|pf}}, {{t+|ru|счесть|pf}}, {{t+|ru|сосчита́ть|pf}}
+* Sanskrit: {{t+|sa|गणयति}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|бро̀јати|impf}}
 *: Roman: {{t+|sh|bròjati|impf}}
