--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -118,3 +118,4 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 #* '''1821''', Julius Müller, ''Ratio et historia odii quo foenus habitum est'', pages 3 and 10, by justification:
 #*: Interdum etiam utrumque vocabulum in usu loquendi inter se commutatur, e. g. Dig. XIII, C. 4. Liv. XXIII, 48.
 #*: Recentiora denique iura, quibus foenus prohibitum est, '''e.g.''' ius Francogallorum, {{...}}
+äīīĜì
