--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -161,9 +161,9 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=춘|eumhun=|rv=chun|mr=ch'un|y=chwun}}
+{{ko-hanja/new|봄|춘}}
 
-# {{defn|lang=ko|sort=日05}}
+# {{context|lang=ko|season}} [[spring]]
 
 ----
 
