/* Translations */  + greek translation <pull#53746083>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -159,7 +159,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * Georgian: {{t|ka|თრევა}}
 * German: {{t+|de|ziehen}}
 *: Alemannic German: {{t|gsw|schleipfe}}
-* Greek:
+* Greek: {{t+|el|τραβώ}}
 *: Ancient: {{t|grc|ἕλκω}}
 * Hebrew: {{t-needed|he}}
 * Hindi: {{t|hi|खींचना}}
