--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -3,6 +3,7 @@
 {{wikipedia|dab=secretary (disambiguation)|secretary}}
 
 ===Etymology===
+{{PIE root|en|krey}}
 From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{etyl|la|en}} {{m|la|secretus||private, secret}}, past participle of {{m|la|secernere||to separate, set apart}}, from {{m|la|se-||apart}} + {{m|la|cernere||to separate}}.
 
 ===Pronunciation===
