t+sw:[[daka]] ([[WT:EDIT|Assisted]]) <catch#53792588>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -433,6 +433,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|łojś|impf}}
 * Spanish: {{qualifier|Latin America}} {{t+|es|atajar}}, {{qualifier|football}} {{t+|es|cazar}}
+* Swahili: {{t+|sw|daka}}
 * Swedish: {{t+|sv|fånga}}, {{t+|sv|fatta}} {{qualifier|dated}}
 * Sylheti: {{t|syl|ꠗꠞꠣ}}
 * Ukrainian: {{t|uk|лови́ти|impf}}, {{t|uk|пійма́ти|pf}}
