--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -18,6 +18,7 @@
 
 ===Glyph origin===
 {{rfe|lang=zh}}
+Pictogram ([[象形]]) – pictographic representation of an umbrella
 
 ===Pronunciation===
 {{zh-pron
