t+fi:[[silta]] t+fi:[[kaari]] t+fi:[[silloittaa]] ([[WT:EDIT|Assisted]]) <bridge#53839712>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -388,7 +388,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Danish: {{t+|da|bro|c}}
 * Extremaduran: {{t|ext|puenti}}
 * Faroese: {{t|fo|brúgv|f}}
-* Finnish: {{t+|fi|komentosilta}}
+* Finnish: {{t+|fi|komentosilta}}, {{t+|fi|silta}}
 * French: {{t+|fr|passerelle|f}}
 * Galician: {{t+|gl|ponte|f}}
 * German: {{t+|de|Brücke|f}}
@@ -472,6 +472,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 {{trans-top|graph theory}}
 * Extremaduran: {{t|ext|puenti}}
 {{trans-mid}}
+* Finnish: {{t+|fi|silta}}, {{t+|fi|kaari}}
 * Italian: {{t+|it|ponte|m}}
 {{trans-bottom}}
 
@@ -503,7 +504,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 {{trans-bottom}}
 
 {{trans-top|to span as if with a bridge}}
-* Finnish: {{t+|fi|sovitella}}
+* Finnish: {{t+|fi|sovitella}}, {{t|fi|silloittaa}}
 * German: {{t+|de|überbrücken}}
 * Hungarian: {{t+|hu|áthidal}}
 * Macedonian: {{t|mk|премостува|sc=Cyrl}}
