t+pl:[[żywot]] ([[WT:EDIT|Assisted]]) <stomach#53849476>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -343,7 +343,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Pashto: {{t+|ps|خېټه|f|tr=xéṭa}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
 * Pitjantjatjara: {{t|pjt|tjuni}}
-* Polish: {{t+|pl|brzuch|m}}
+* Polish: {{t+|pl|brzuch|m}}, {{t+|pl|żywot|m}} {{qualifier|outdated}}
 * Portuguese: {{t+|pt|barriga|f}}
 * Romanian: {{t+|ro|burtă|f}}
 * Russian: {{t+|ru|живо́т|m}}, {{qualifier|disparaging}} {{t+|ru|брю́хо|n}}, {{t+|ru|пу́зо|n}}, {{qualifier|archaic, poetic, ironic}} {{t+|ru|чре́во|n}}
