/* Translations */ Added Egyptian Arabic translation of this word. <speak#53856424>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -117,6 +117,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Afrikaans: {{t+|af|praat}}
 * Albanian: {{t+|sq|flas}}
 * Arabic: {{t|ar|تَحَدَّثَ}}, {{t|ar|تَكَلَّمَ}}
+*: Egyptian Arabic: {{t|arz|كلم|tr=kallim}}
 *: Moroccan Arabic: {{t|ary|هْدر}}
 *: North Levantine Arabic: {{t|apc|حكى|tr=ḥaka}}
 * Armenian: {{t+|hy|խոսել}}
