/* Translations */ Added Egyptian Arabic translation of this word. <choose#53875016>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -45,6 +45,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * Afrikaans: {{t+|af|kies}}
 * Albanian: {{t+|sq|zgjedh}}
 * Arabic: {{t|ar|اِخْتَارَ}}
+*: Egyptian Arabic: {{t|arz|اختار|tr=iḵtār}}
 * Armenian: {{t+|hy|ընտրել}}
 * Assamese: {{t|as|বাছা}} {{t|as|বাছনি}}, {{t|as|নিৰ্বাচন কৰা|tr=nirbasôn kôra}}
 * Asturian: {{t|ast|escoyer}}, {{t|ast|elixir}}
