--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -211,11 +211,11 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Cherokee: {{t|chr|ᎪᏢᏅ}}
 * Cheyenne: {{t|chy|heóveamėške}}
 * Chinese:
-*: Cantonese: {{t|yue|牛油|tr=ngau4 jau4|sc=Hani}}
-*: Hakka: {{t|hak|牛油|tr=ngiù-yù|sc=Hani}}, {{t|hak|乳油|tr=nen-yù}}, {{t|hak|白塔|tr=pat-tá}}
-*: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t|cmn|白脫|sc=Hani}}, {{t|cmn|白脱|tr=báituō|sc=Hani}}
+*: Cantonese: {{t|yue|牛油|tr=ngau4 jau4}}
+*: Hakka: {{t|hak|牛油|tr=ngiù-yù}}, {{t|hak|乳油|tr=nen-yù}}, {{t|hak|白塔|tr=pat-tá}}
+*: Mandarin: {{t+|cmn|黃油}}, {{t+|cmn|黄油|tr=huángyóu}}, {{t+|cmn|牛油|tr=niúyóu}}, {{t|cmn|白脫}}, {{t|cmn|白脱|tr=báituō}}
 *: Min Nan: {{t+|nan|牛油|tr=gû-iû}}, {{t|nan|bá-tah}} {{qualifier|Taiwan}}
-*: Wu: {{t|wuu|白脫|sc=Hani}}, {{t|wuu|白脱|tr=5baq tha|sc=Hani}}, {{t-check|wuu|牛油|tr=nyeu yeu|sc=Hani}}, {{t-check|wuu|黃油|sc=Hani}}, {{t-check|wuu|黄油|tr=huaon yue|sc=Hani}}, {{t|wuu|白脫}}, {{t|wuu|白脱|tr=baq tha}}
+*: Wu: {{t|wuu|白脫}}, {{t|wuu|白脱|tr=5baq tha}}, {{t-check|wuu|牛油|tr=nyieu hhieu}}
 * Classical Syriac: {{t|syc|ܚܐܘܬܐ|f|tr=ḥeˀwṯā|sc=Syrc}}
 * Coptic: {{t|cop|ϭⲉⲗⲓ}}
 * Cornish: {{t|kw|amanyn|m}}
