--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -152,6 +152,6 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[giả]], [[giá]], [[hạ]]|rs=人09}}
+{{vi-hantu|[[giả]]|rs=人09}}
 
 # {{defn|lang=vi|sort=人09}}
