/* Derived terms */ <coat#53990663>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -46,14 +46,12 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 #*: Here's a trick of discarded cards of us! We were ranked with '''coats''' as long as old master lived.
 
 ====Derived terms====
-{{der-top}}
-* {{l|en|buffy coat}}
-* {{l|en|coat of arms}}
-* {{l|en|covert-coat}}
-{{der-mid}}
-* {{l|en|greatcoat}}
-* {{l|en|overcoat}}
-{{der-bottom}}
+{{der3|en
+|buffy coat
+|coat of arms
+|covert-coat
+|greatcoat
+|overcoat}}
 
 ====Descendants====
 * {{desc|srn|koto}}
